rgb/src/styles.css
/* You can add global styles to this file, and also import other style files */
@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');


:root {
  scroll-behavior: smooth;
}

html, body {
  width: 100%;
  height: 100%;
}


body {
  margin: 0;
  font-family: "Inter Tight", sans-serif;
  font-size: 12pt;
  font-weight: 400;
  line-height: initial;
  background-color: white;
  color: black;
}

* {
  box-sizing: border-box;
}

span {
  cursor: inherit;
}

a {
  color: inherit;
  text-decoration: none;
}

/* Common UI Elements */

button {
  overflow: hidden;
  border: none;
  outline: none;
  background-color: transparent;
  color: inherit;
  cursor: pointer;
  transition: all 0.2s ease;
}

  button.btn {
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
  }

  button i {
    font-size: 20pt;
  }

  .muted,
  button:disabled {
    opacity: 0.4
  }

